<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <DigitalClock
        android:id="@+id/dClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@drawable/blue"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_title1"
            android:textColor="@drawable/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/mButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button1"
            android:textColor="@drawable/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_default"
            android:textColor="@drawable/red"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button2"
            android:textColor="@drawable/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_title2"
            android:textColor="@drawable/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/mButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button1"
            android:textColor="@drawable/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_default"
            android:textColor="@drawable/red"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button2"
            android:textColor="@drawable/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>